# com.xenexsys.genai.projWebCrawlQnA

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/com.xenexsys.genai.projWebCrawlQnA.chat/: web-qa-1.py  web-qa-2.py  web-qa-F.py
src/com.xenexsys.genai.projWebCrawlQnA.chat/processed/: embeddings.csv  embeddings99.csv  scraped.csv
src/com.xenexsys.genai.projWebCrawlQnA.chat/text/xenex.com:8080/: enex.com:8080_sdg1.html.txt  enex.com:8080_sdg11.html.txt  enex.com:8080_sdg16.html.txt  enex.com:8080_sdg17.html.txt  enex.com:8080_sdg3.html.txt  enex.com:8080_sdg4.html.txt  enex.com:8080_sdg7.html.txt  enex.com:8080_sdg8.html.txt  enex.com:8080_sdg9.html.txt
src/com.xenexsys.genai.projWebCrawlQnA.chat/text/xenexsys.com:8080/: enexsys.com:8080.txt  enexsys.com:8080_carbon_footprint_calculator.html.txt  enexsys.com:8080_sdg10.html.txt  enexsys.com:8080_sdg11.html.txt  enexsys.com:8080_sdg12.html.txt  enexsys.com:8080_sdg13.html.txt  enexsys.com:8080_sdg14.html.txt  enexsys.com:8080_sdg15.html.txt  enexsys.com:8080_sdg2.html.txt  enexsys.com:8080_sdg5.html.txt  enexsys.com:8080_sdg6.html.txt
src/com.xenxsys.genai.projWebCrawlQnA.core/: ConfReaderEnv1.py  ConfReaderJson1.py
tests/: GenAIConfigurationTest1.py  GenAIConfigurationTest2.py
