[project]
name = "com.xenxsys.genai.projConf"
version = "0.0.1"
authors = [
  { name="Ajay Kumar", email="this.ajk@gmail.com" },
]
description = "A small openai connection package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/ProjGenAiConfig"
Issues = "https://github.com/pypa/ProjGenAiConfig/issues"